// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCodeFor converts es6 exports to module.exports 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 1678564938;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"\\\\\\"\\": {}
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 3`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [false, true, false];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 4`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 5`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\")Eb$\\": false
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 6`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"_5i{[}P%Wz\\": [0.5980762603670823, -1348699266, \\"cPN_djI6dM\\", 1481924097],
  \\">aB=b\\": true
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 7`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 8`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"q.U1aQP\\": {
    \\"_x4L~IY\\": \\"g#,m\\",
    \\"8e\\": null,
    \\"xApa$iY5Bm\\": false
  },
  \\"z+26!*QRls\\": [\\">x{j\\", 0.04726269451726617, true],
  \\"\\": true,
  \\"h2S\\": null,
  \\"Y'Is(Y4r\\": \\"_tNm\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 9`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [{}, -9007199254740991, 31603099, {}, {
  \\"S&gG>x{j\\": 0.17923961884109318
}];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 10`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"Y'Is(Y4r\\": \\"id_tNmX_B\\",
  \\"$f.HI@\\": \\"sWbv1-^U8\\",
  \\"\\\\\\\\s\\": \\":]i*n5S1\\",
  \\"\\": \\"\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 11`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"i*n\\": true,
  \\"\\": {
    \\"UMvhnH3\\": 1.7976931348623157e+308,
    \\"GNYs,^\\": -979600172,
    \\"c5l\\": \\"o*~xFQF6\\"
  },
  \\"^\\\\\\"\\": -1000123283,
  \\"ph[u%9Ze)c\\": {
    \\"RRw\\\\\\\\v;p8m7\\": \\"r9ulZLul\\",
    \\"J\\": \\")so\\",
    \\"\`M\\": \\"y6z\\",
    \\"|n-l#\\": \\"cX944\\",
    \\"1xRq:]g,C<\\": null
  },
  \\"!N/ *QK^Vo\\": [0.4876887488770921, 0.3311553064753666, 0.9129724475337543, 0.49958607265114263]
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 12`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 18;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 13`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = true;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 14`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"1xRq:]g,C<\\": [9007199254740991, 9007199254740991, 9007199254740991, 2.220446049250313e-16]
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 15`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [\\"9J\\", [569411533], [], [0.5439724754989754, 0.5233814676312565, 5e-324], -1494970100];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 16`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"9pF\\": null,
  \\"=YAf\\": \\"MeK?9P\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 17`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 18`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"H~h:c]6\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 19`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 0.48538716747560096;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 20`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"PUh^zer-C~\\": \\"M'&WN\\",
  \\"BztHzz4\\\\\\"\\": \\"*!,,\\",
  \\"v>YCh\\": \\"\\\\\\"#\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 21`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 0;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 22`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = true;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 23`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [false, false, false];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 24`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [\\"AtS'&{\\", \\"e_c1a\\", \\" \` hpKZ}\\", \\"95+Nj:k&D\\", \\"+sD^(_dH!\\"];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 25`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 26`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [0, 9007199254740991, 0.6765198329744564, 1.7976931348623157e+308, 5e-324];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 27`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [{}, false, {
  \\"z7n\\": 0.09424553957975057,
  \\"\\": 0.6658070376773636,
  \\"v\\": false,
  \\"i;IM-w\\\\\\\\\\\\\\"7\\": true,
  \\":>\\": -1150965440
}, {
  \\"-rhM+\\": \\"H?)d\\",
  \\"[\\\\\\"&<Y|k\\": \\"|X#<G\\"
}];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 28`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _default = -16;

exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 29`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"SfT\`eH=\\": 2.220446049250313e-16,
  \\"HrHoWg{\\": 0
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 30`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"KupeKcpVE/\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 31`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 2.9802324719163664e-8;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 32`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 2.2351741790771484e-7;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 33`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = true;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 34`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"9\\": true,
  \\"x0\\": false,
  \\"r5=R1Ik#\\": false,
  \\"nzjNi7o\\": true
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 35`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"jZ.H2\\": {},
  \\"+dPf2B}\\": [2062965854, -449095101],
  \\"YrS%|hXY\\": [],
  \\"G7\\": {
    \\"M^k\\": null,
    \\"n\\\\\\"rrq0H3 \\": null,
    \\"&p4K8M5\\": \\"4W@b4\\"
  },
  \\"R[x~]\\": \\"Qym\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 36`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 9007199254740991;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 37`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 38`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"\\": [],
  \\"zL/\\": [false, \\"yP^CK%}:kV\\", 0.5175571684788394, false, false],
  \\"-<9 X\\": true,
  \\"+*a7Pw\\": -1207958231
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 39`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 0.3215340388470631;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 40`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = true;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 41`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [5e-324, null, 1.7976931348623157e+308, -9007199254740991];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 42`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"D;8a_Dj\\": {
    \\">~TH\\": -1528941290,
    \\"WON=:\\": 0.9472611484690855,
    \\"va=N;R\\": 0.26333578945649294
  },
  \\"+\\": {
    \\"LFw\\": \\"b\\",
    \\"wl{m\\": \\"Yd4Eu\\",
    \\"\\": null,
    \\"Y_.fCR\\": -1220265339,
    \\"hm61\\": 1.7976931348623157e+308
  },
  \\"]gAo7\\": true
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 43`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"LFw\\": -1807345948
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 44`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [[\\"gAo7~MHJ\\", 5e-324, \\"\\", null, 0.9642353804627183]];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 45`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 46`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [true];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 47`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 48`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = true;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 49`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 50`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [\\"4\\", [0.5964748313866186, null, \\"nj2n5mf~\\", null, false], {
  \\"0k>D\\": null,
  \\"Mpn2$\\": \\"\\",
  \\"GTIO\\": 0.77143084790041,
  \\"\\": \\"uP6\\"
}];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 51`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"#Mpn2$l{*\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 52`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 53`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"qe\\": false,
  \\"B2u-5;HR}4\\": true,
  \\"\`\\": false,
  \\"ex~@vZ\\": false,
  \\",$hlqO\\": false
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 54`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [null];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 55`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [0.29356731076538345, 0.5829161843929943, 0.3917379523291735, 0.4702846344489392, 0.9652969898310241];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 56`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"$tWm@so\\": 0.9252251911472146,
  \\"3K8I8<\\": [\\"GPI4ZdD\\", \\"'>ihvj\\", \\"aX\\"],
  \\"#)xN~Z&<\\": [\\"\\", \\"+bkhgL3M\\", null, null, null]
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 57`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"a\\\\\\"\\\\\\"aX&#)xN\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 58`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"9RM&Z$B\\": \\"frU7eJx\\",
  \\"1R[_>(5$\\": \\"5gSU:\\",
  \\",XOB.\\": \\"=2CFu^u&d\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 59`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"U:>;,XOB.\\": [-911570663, -1675323350, -985229528, 279192044, 1825981592],
  \\"dMqEaye\\": {
    \\"Qo0_I\\": 0.49155933360609905
  },
  \\"[8.<<s-K\\": \\"[VW\\",
  \\"*\\\\\\"pYjRDC\\": [null, null]
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 60`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [{
  \\"KBD=[VW1*\\": \\"pYjRD\\",
  \\"G%]\\": \\"S_LO\\",
  \\"u\\": \\"S\\"
}, [0.597903993840904, \\"/ld$'S\\", \\"]-\\", null]];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 61`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = null;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 62`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"0IKk&9X\\": 0.6432217017414309
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 63`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"Vbb\\": [null, null],
  \\"#5W&bk\\": {
    \\"ZA7 5R\\": 0,
    \\"<<{iL\\": null,
    \\"UjUu/v0\\": 1.7976931348623157e+308,
    \\"J=9hMM_W,S\\": null,
    \\"qW6P\\\\\\"X7Y7U\\": 2.220446049250313e-16
  },
  \\"ft48{\\": \\"O{z=\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 64`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [null, \\"J=9hMM_W,S\\"];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 65`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"9k\\": 0.8759753680007055
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 66`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = false;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 67`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [{
  \\"\\": null,
  \\"*j\`\\": 0.3326504420260288
}, [null, 9007199254740991, 5e-324, null, 0.2059875529316092], [\\"X[\\", \\"#FM\\", \\".4heF\\", \\"Em\\\\\\"\\"], [3.513951303268925e-7, 0.42359069568794017], null];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 68`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"#FM\\": null,
  \\"4h\\": null,
  \\"tEm\\": 2.220446049250313e-16
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 69`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 1239585184;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 70`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"\\": {
    \\"\`;]+&%FZ=\\": null,
    \\"|n-w\\": 1890267383
  }
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 71`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 72`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"\\\\\\"46~q+/Rl\\": [0.2682057513963957, 0.7992430476265115, 0.4774518482742478, 0.6241102512346408],
  \\"W&-(la\\": {
    \\"B2KcL\\": \\"\\",
    \\"}@\\\\\\"O[\\": true,
    \\"i;SX,3=\\": -1667094968,
    \\"u\\": true
  },
  \\"G<v\\": \\"3~.Mdn4#\\",
  \\"c7ARJt\\": [null, 0.7978632130440757, \\"9+!\\", null],
  \\"S\\": [0.38705392531982397, 0.6314914893705093, 0.9357231578994244, 0.925976728628643, 0.013547720679027764]
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 73`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [\\"@\\\\\\"O[\\"];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 74`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 75`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"v)iF\\": [false, false, false],
  \\"Un&\\": {
    \\"R])~\\": 0.36724149105534276,
    \\"}Qzju\\": 0.7064459576870037,
    \\"j*lrk]\\": 0.3414526486369215
  }
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 76`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [{
  \\"?1&}f+\\": 0.6646375255015015,
  \\",*\\": 0.4057736257545691
}, [true, null, null, \\"w[}\\", 0.049649108309681056], [\\"'{,^\\"]];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 77`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [[null], -947276156, {
  \\"r7LzUImg\\": null,
  \\"S|\\": 0.9437741829002104,
  \\"\\": \\"&d#\\",
  \\"!>D\\": \\"A\\"
}, {
  \\"(~kCSL*X/\\": true,
  \\"\\": false
}, {}];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 78`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"Ryu\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 79`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 0.8335059400445773;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 80`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = \\"0s&\\";
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 81`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 82`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 1275493692;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 83`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"+#k\\": {},
  \\"t\\": true
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 84`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [{
  \\")z\\": \\"\\",
  \\"kgx\\": false
}, -2061774872, 1928821408, {
  \\"}\\": \\"w\\"
}];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 85`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [false];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 86`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"Y\\\\\\\\8<\\": [],
  \\"wJR\`BTrmT\\": [1170000300, true, \\"[sfpfc\\", 955426770]
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 87`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"/&xys;^\\": [867286031, 1399890100, 224952930, 159531775],
  \\"O\\\\\\\\N;z\\": 1182558358,
  \\"Q\`p\\": {},
  \\"\\": {},
  \\"'OA(4MkJ[h\\": [\\"Bgo(lf}/f$\\", 1141364114]
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 88`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 89`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [{
  \\"(Q~dGyb\\": 505428906,
  \\"KPb\\": \\"3KNw@*\\",
  \\"|Z|g>bu?X\\": \\"h0A0JRgO\\",
  \\"XM E.J+A/R\\": \\"xIWqz\\"
}, {
  \\">|PiV\\": 0.6292014232669483,
  \\"\\": 0.6451047237103741
}, [0.0617700219154359, 0.7958180174556212], null];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 90`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 91`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"~i#:0<g)N!\\": true,
  \\"+\\": true,
  \\":\\": true
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 92`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"xf?.\\": {
    \\"to)jEc7d\\": \\"btuT3Z{\\"
  },
  \\"4q>3y&\\\\\\"j\\": [null],
  \\"+pb\`G8{@H\\": [\\"Vg!K.FRlNC\\", null],
  \\"/~P>lRCV,\\": null
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 93`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"sy%D\\": 1434284095,
  \\"\`j.;m)f\\": 879271298,
  \\"j+p\\": -20629852,
  \\"G8{@HxR2|E\\": 1822555807
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 94`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"\\\\\\\\&Q/~P>lRC\\": false,
  \\"_dw\\": false
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 95`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 0.5532306134700794;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 96`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 97`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [0.39420252382294285, 0.482513777624227, 0.1053434562168667];
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 98`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  \\"/S/H!')?\\": \\"U1f0\\",
  \\"Sd;^\\": \\"Fj\`\\"
};
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 99`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = true;
exports.default = _default;"
`;

exports[`getCodeFor converts es6 exports to module.exports 100`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = [];
exports.default = _default;"
`;

exports[`getCodeFor converts typescript to javascript 1`] = `
"\\"use strict\\";

let x = -1626287087;
let y = \\"'s\\\\\\\\_:S.~U\\";"
`;

exports[`getCodeFor converts typescript to javascript 2`] = `
"\\"use strict\\";

let x = -13;
let y = \\"l6q1ma \\";"
`;

exports[`getCodeFor converts typescript to javascript 3`] = `
"\\"use strict\\";

let x = 4;
let y = \\"$&#\\\\\\"1D>\\\\\\"\\\\\\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 4`] = `
"\\"use strict\\";

let x = -915958232;
let y = \\"$ItHa\\\\\\")#\\";"
`;

exports[`getCodeFor converts typescript to javascript 5`] = `
"\\"use strict\\";

let x = 339536370;
let y = \\"qUb*c\\";"
`;

exports[`getCodeFor converts typescript to javascript 6`] = `
"\\"use strict\\";

let x = -11;
let y = \\".\\";"
`;

exports[`getCodeFor converts typescript to javascript 7`] = `
"\\"use strict\\";

let x = -29;
let y = \\"{Y!I6RdHe#\\";"
`;

exports[`getCodeFor converts typescript to javascript 8`] = `
"\\"use strict\\";

let x = -10;
let y = \\" !&\\";"
`;

exports[`getCodeFor converts typescript to javascript 9`] = `
"\\"use strict\\";

let x = 15407999;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 10`] = `
"\\"use strict\\";

let x = -1;
let y = \\"(z&kX3?1V \\";"
`;

exports[`getCodeFor converts typescript to javascript 11`] = `
"\\"use strict\\";

let x = -8;
let y = \\"I\\";"
`;

exports[`getCodeFor converts typescript to javascript 12`] = `
"\\"use strict\\";

let x = -1791107420;
let y = \\"axlqV\`9\\";"
`;

exports[`getCodeFor converts typescript to javascript 13`] = `
"\\"use strict\\";

let x = 150579102;
let y = \\"hx#5\\";"
`;

exports[`getCodeFor converts typescript to javascript 14`] = `
"\\"use strict\\";

let x = -10;
let y = \\"$\\\\\\\\\\";"
`;

exports[`getCodeFor converts typescript to javascript 15`] = `
"\\"use strict\\";

let x = 25;
let y = \\"\\\\\\"bz%$\\";"
`;

exports[`getCodeFor converts typescript to javascript 16`] = `
"\\"use strict\\";

let x = 2024224123;
let y = \\"tL\\";"
`;

exports[`getCodeFor converts typescript to javascript 17`] = `
"\\"use strict\\";

let x = 369420664;
let y = \\"~R C\\";"
`;

exports[`getCodeFor converts typescript to javascript 18`] = `
"\\"use strict\\";

let x = 892765813;
let y = \\"~\\";"
`;

exports[`getCodeFor converts typescript to javascript 19`] = `
"\\"use strict\\";

let x = 5;
let y = \\"1Ud\`~\\";"
`;

exports[`getCodeFor converts typescript to javascript 20`] = `
"\\"use strict\\";

let x = -1739089647;
let y = \\"aQ?vj5_\\";"
`;

exports[`getCodeFor converts typescript to javascript 21`] = `
"\\"use strict\\";

let x = 1521296351;
let y = \\"7=c\\";"
`;

exports[`getCodeFor converts typescript to javascript 22`] = `
"\\"use strict\\";

let x = -76421236;
let y = \\"Nj&\\";"
`;

exports[`getCodeFor converts typescript to javascript 23`] = `
"\\"use strict\\";

let x = 1667449910;
let y = \\"*{~i6\\";"
`;

exports[`getCodeFor converts typescript to javascript 24`] = `
"\\"use strict\\";

let x = 17;
let y = \\"{!*.\\\\\\"sQs\\";"
`;

exports[`getCodeFor converts typescript to javascript 25`] = `
"\\"use strict\\";

let x = -1144806400;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 26`] = `
"\\"use strict\\";

let x = 1039967726;
let y = \\"n!Za&\\";"
`;

exports[`getCodeFor converts typescript to javascript 27`] = `
"\\"use strict\\";

let x = -2018469198;
let y = \\"\`oh#M\\";"
`;

exports[`getCodeFor converts typescript to javascript 28`] = `
"\\"use strict\\";

let x = -1151894673;
let y = \\"_*-VqR#DL&\\";"
`;

exports[`getCodeFor converts typescript to javascript 29`] = `
"\\"use strict\\";

let x = 11;
let y = \\"+ F\\";"
`;

exports[`getCodeFor converts typescript to javascript 30`] = `
"\\"use strict\\";

let x = 1801691249;
let y = \\"'#W\\";"
`;

exports[`getCodeFor converts typescript to javascript 31`] = `
"\\"use strict\\";

let x = -1038095622;
let y = \\"@H\\";"
`;

exports[`getCodeFor converts typescript to javascript 32`] = `
"\\"use strict\\";

let x = 441622608;
let y = \\"IoMQNM\`\\";"
`;

exports[`getCodeFor converts typescript to javascript 33`] = `
"\\"use strict\\";

let x = 1545310843;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 34`] = `
"\\"use strict\\";

let x = 282896875;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 35`] = `
"\\"use strict\\";

let x = 1747349380;
let y = \\"qdL2\\\\\\"v\\\\\\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 36`] = `
"\\"use strict\\";

let x = -2056718291;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 37`] = `
"\\"use strict\\";

let x = -6;
let y = \\"!X-kAVDx,\\";"
`;

exports[`getCodeFor converts typescript to javascript 38`] = `
"\\"use strict\\";

let x = -938532322;
let y = \\";\\";"
`;

exports[`getCodeFor converts typescript to javascript 39`] = `
"\\"use strict\\";

let x = 2063941292;
let y = \\"A% \\";"
`;

exports[`getCodeFor converts typescript to javascript 40`] = `
"\\"use strict\\";

let x = 112070530;
let y = \\"{GRDH \\";"
`;

exports[`getCodeFor converts typescript to javascript 41`] = `
"\\"use strict\\";

let x = -16;
let y = \\"inj2}-T\\";"
`;

exports[`getCodeFor converts typescript to javascript 42`] = `
"\\"use strict\\";

let x = -1303353386;
let y = \\"\\\\\\\\#\\";"
`;

exports[`getCodeFor converts typescript to javascript 43`] = `
"\\"use strict\\";

let x = 637998668;
let y = \\"+POu\\";"
`;

exports[`getCodeFor converts typescript to javascript 44`] = `
"\\"use strict\\";

let x = 326813907;
let y = \\"]0; \\";"
`;

exports[`getCodeFor converts typescript to javascript 45`] = `
"\\"use strict\\";

let x = 564801788;
let y = \\"H,-R%4\\\\\\\\XGB\\";"
`;

exports[`getCodeFor converts typescript to javascript 46`] = `
"\\"use strict\\";

let x = 1799870653;
let y = \\"$&\\";"
`;

exports[`getCodeFor converts typescript to javascript 47`] = `
"\\"use strict\\";

let x = -1;
let y = \\"$Ps%u\\";"
`;

exports[`getCodeFor converts typescript to javascript 48`] = `
"\\"use strict\\";

let x = 20;
let y = \\"z0sPv-D1\\";"
`;

exports[`getCodeFor converts typescript to javascript 49`] = `
"\\"use strict\\";

let x = -23967380;
let y = \\"QMdB,\\";"
`;

exports[`getCodeFor converts typescript to javascript 50`] = `
"\\"use strict\\";

let x = 16;
let y = \\"24A[Z_\\";"
`;

exports[`getCodeFor converts typescript to javascript 51`] = `
"\\"use strict\\";

let x = 1228038366;
let y = \\"xqSp= t\\";"
`;

exports[`getCodeFor converts typescript to javascript 52`] = `
"\\"use strict\\";

let x = 1146394956;
let y = \\"v!\\";"
`;

exports[`getCodeFor converts typescript to javascript 53`] = `
"\\"use strict\\";

let x = -8;
let y = \\"I2]UoIO\\";"
`;

exports[`getCodeFor converts typescript to javascript 54`] = `
"\\"use strict\\";

let x = -12;
let y = \\"t(py{\\";"
`;

exports[`getCodeFor converts typescript to javascript 55`] = `
"\\"use strict\\";

let x = 223665173;
let y = \\"TmS*Q\\\\\\\\K\\";"
`;

exports[`getCodeFor converts typescript to javascript 56`] = `
"\\"use strict\\";

let x = -2;
let y = \\" u\\";"
`;

exports[`getCodeFor converts typescript to javascript 57`] = `
"\\"use strict\\";

let x = 16;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 58`] = `
"\\"use strict\\";

let x = 278131574;
let y = \\"3L(e\\";"
`;

exports[`getCodeFor converts typescript to javascript 59`] = `
"\\"use strict\\";

let x = 975883285;
let y = \\"%!|;\\\\\\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 60`] = `
"\\"use strict\\";

let x = 424122954;
let y = \\"#*G9v& *#\\";"
`;

exports[`getCodeFor converts typescript to javascript 61`] = `
"\\"use strict\\";

let x = 1;
let y = \\"N\\";"
`;

exports[`getCodeFor converts typescript to javascript 62`] = `
"\\"use strict\\";

let x = -418989144;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 63`] = `
"\\"use strict\\";

let x = -303299853;
let y = \\">S)T|\\";"
`;

exports[`getCodeFor converts typescript to javascript 64`] = `
"\\"use strict\\";

let x = 6;
let y = \\"{x:)Aa ]\\";"
`;

exports[`getCodeFor converts typescript to javascript 65`] = `
"\\"use strict\\";

let x = 23;
let y = \\";rE=\\";"
`;

exports[`getCodeFor converts typescript to javascript 66`] = `
"\\"use strict\\";

let x = 1053120535;
let y = \\"'z *>\\";"
`;

exports[`getCodeFor converts typescript to javascript 67`] = `
"\\"use strict\\";

let x = -2004007637;
let y = \\"Ljlv\\\\\\\\7\\";"
`;

exports[`getCodeFor converts typescript to javascript 68`] = `
"\\"use strict\\";

let x = 14;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 69`] = `
"\\"use strict\\";

let x = -758201679;
let y = \\"<\\\\\\\\\\";"
`;

exports[`getCodeFor converts typescript to javascript 70`] = `
"\\"use strict\\";

let x = -30;
let y = \\"fE|\\";"
`;

exports[`getCodeFor converts typescript to javascript 71`] = `
"\\"use strict\\";

let x = 701288080;
let y = \\"35G!t\\";"
`;

exports[`getCodeFor converts typescript to javascript 72`] = `
"\\"use strict\\";

let x = 500373681;
let y = \\"4$K^l\\";"
`;

exports[`getCodeFor converts typescript to javascript 73`] = `
"\\"use strict\\";

let x = 1777365247;
let y = \\"Q\\";"
`;

exports[`getCodeFor converts typescript to javascript 74`] = `
"\\"use strict\\";

let x = 28;
let y = \\"k%*\\";"
`;

exports[`getCodeFor converts typescript to javascript 75`] = `
"\\"use strict\\";

let x = 1601306609;
let y = \\"*\\\\\\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 76`] = `
"\\"use strict\\";

let x = 26;
let y = \\"%!$\\";"
`;

exports[`getCodeFor converts typescript to javascript 77`] = `
"\\"use strict\\";

let x = 1319857401;
let y = \\"sfZ*Ygln9f\\";"
`;

exports[`getCodeFor converts typescript to javascript 78`] = `
"\\"use strict\\";

let x = -1144575234;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 79`] = `
"\\"use strict\\";

let x = 0;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 80`] = `
"\\"use strict\\";

let x = -1984579199;
let y = \\"\\";"
`;

exports[`getCodeFor converts typescript to javascript 81`] = `
"\\"use strict\\";

let x = 2108906528;
let y = \\"$*k\\";"
`;

exports[`getCodeFor converts typescript to javascript 82`] = `
"\\"use strict\\";

let x = -22;
let y = \\" +i6 f\\";"
`;

exports[`getCodeFor converts typescript to javascript 83`] = `
"\\"use strict\\";

let x = -2125064007;
let y = \\"8gxYB\\";"
`;

exports[`getCodeFor converts typescript to javascript 84`] = `
"\\"use strict\\";

let x = 1290809959;
let y = \\"X[e0\\";"
`;

exports[`getCodeFor converts typescript to javascript 85`] = `
"\\"use strict\\";

let x = 2064558289;
let y = \\"*G(>h3T:'\\";"
`;

exports[`getCodeFor converts typescript to javascript 86`] = `
"\\"use strict\\";

let x = 243496149;
let y = \\")>\\\\\\"9iamD\\";"
`;

exports[`getCodeFor converts typescript to javascript 87`] = `
"\\"use strict\\";

let x = -1746717414;
let y = \\"!1'hcW52=\\";"
`;

exports[`getCodeFor converts typescript to javascript 88`] = `
"\\"use strict\\";

let x = -970736905;
let y = \\"D\\";"
`;

exports[`getCodeFor converts typescript to javascript 89`] = `
"\\"use strict\\";

let x = 93894507;
let y = \\"{}FUb@\\";"
`;

exports[`getCodeFor converts typescript to javascript 90`] = `
"\\"use strict\\";

let x = -12;
let y = \\"eM\\";"
`;

exports[`getCodeFor converts typescript to javascript 91`] = `
"\\"use strict\\";

let x = 22;
let y = \\"L/MhM;\\";"
`;

exports[`getCodeFor converts typescript to javascript 92`] = `
"\\"use strict\\";

let x = -406995909;
let y = \\"a~dhAOl \\";"
`;

exports[`getCodeFor converts typescript to javascript 93`] = `
"\\"use strict\\";

let x = -1992231284;
let y = \\"PO|3a\\";"
`;

exports[`getCodeFor converts typescript to javascript 94`] = `
"\\"use strict\\";

let x = 2087236048;
let y = \\"@L*W,Nu5Ee\\";"
`;

exports[`getCodeFor converts typescript to javascript 95`] = `
"\\"use strict\\";

let x = 27;
let y = \\"p}^\\";"
`;

exports[`getCodeFor converts typescript to javascript 96`] = `
"\\"use strict\\";

let x = -136395445;
let y = \\">\\";"
`;

exports[`getCodeFor converts typescript to javascript 97`] = `
"\\"use strict\\";

let x = 1216452023;
let y = \\"IY\\";"
`;

exports[`getCodeFor converts typescript to javascript 98`] = `
"\\"use strict\\";

let x = -1121970968;
let y = \\"$-:PjzV2%\\";"
`;

exports[`getCodeFor converts typescript to javascript 99`] = `
"\\"use strict\\";

let x = 564102045;
let y = \\"&1%U'\\";"
`;

exports[`getCodeFor converts typescript to javascript 100`] = `
"\\"use strict\\";

let x = -1923903753;
let y = \\"NJ*GCE\\";"
`;
